add blue tags and overlay

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h3> Adopt a Dog </h3>
     <p>If you are intrested in adopting one of our animals, please fill out our <a href="onlineform.html"> online
             adoption form </a>
+        <h3> Show me dogs that are </h3>
         <section class="dog_filter">
-            <h3> Show me dogs that are </h3>
             <div class="gender">
                 <h3> Gender</h3>
                 <input type="radio" name="gender" value="male"> Male<br>
@@ -30,18 +30,18 @@
             </div>
             <div class="size">
                 <h3> Size </h3>
-                <input type="radio" name="Size" value="tiny"> Tiny <br>
-                <input type="radio" name="Size" value="small"> Small <br>
-                <input type="radio" name="Size" value="meduim"> Medium <br>
-                <input type="radio" name="Size" value="large"> Large <br>
+                <input type="checkbox" name="Size" value="tiny"> Tiny <br>
+                <input type="checkbox" name="Size" value="small"> Small <br>
+                <input type="checkbox" name="Size" value="meduim"> Medium <br>
+                <input type="checkbox" name="Size" value="large"> Large <br>
             </div>
             <div class="traits">
                 <h3> Personality <br> Traits</h3>
-                <input type="radio" name="Traits" value="Easygoing"> Easygoing <br>
-                <input type="radio" name="Traits" value="Energetic"> Energetic <br>
-                <input type="radio" name="Traits" value="Good With Kids"> Good With Kids <br>
-                <input type="radio" name="Traits" value="Good With other dogs"> Good With other dogs <br>
-                <input type="radio" name="Traits" value="Good With cats"> Good With cats <br>
+                <input type="checkbox" name="Traits" value="Easygoing"> Easygoing <br>
+                <input type="checkbox" name="Traits" value="Energetic"> Energetic <br>
+                <input type="checkbox" name="Traits" value="Good With Kids"> Good With Kids <br>
+                <input type="checkbox" name="Traits" value="Good With other dogs"> Good With other dogs <br>
+                <input type="checkbox" name="Traits" value="Good With cats"> Good With cats <br>
             </div>
         </section>
 
@@ -50,82 +50,135 @@
 
                 <p> Beans</p>
                 <img src="starter_files/images/beans.jpg" alt="Beans" height="200" width="300">
-                <p> Aldut Male Medium Easygoing Good With cats</p>
+                <div class="bluetags">
+                    <p class="Tags"> Aldut </p>
+                    <p class="Tags"> Male </p>
+                    <p class="Tags"> Medium </p>
+                    <p class="Tags"> Easygoing</p>
+                    <p class="Tags">Good With cats </p>
+                </div>
+
             </div>
             <div class="column">
 
                 <p> Zelda</p>
                 <img src="starter_files/images/boston-terrier.jpg" alt="Zelda" height="200" width="300">
-                <p> senior Female Small Easygoing Good With Kids Good With other dogs</p>
+                <div class="bluetags">
+                    <p class="Tags"> senior </p>
+                    <p class="Tags"> Female</p>
+                    <p class="Tags"> Small </p>
+                    <p class="Tags"> Easygoing</p>
+                    <p class="Tags"> Good with Kids </p>
+                    <p class="Tags">Good with other dogs </p>
+                </div>
             </div>
             <div class="column">
                 <p> Baby</p>
                 <img src="starter_files/images/boxer.jpg" alt="Baby" height="200" width="300">
-                <p> young female large Energetic Good With Kids Good With other dogs</p>
-                <div class="column">
-                    </section>
-                    <div class="column2">
-                    <p> Tom-Tom </p>
-                    <img src="starter_files/images/golden-lab.jpg" alt="Tom-Tom" height="200" width="300">
-                    <p> young Male large Energetic Good with Kids good with other dogs good with </p>
+                <div class="bluetags">
+                    <p class="Tags"> young </p>
+                    <p class="Tags"> female </p>
+                    <p class="Tags"> large</p>
+                    <p class="Tags"> Energetic</p>
+                    <p class="Tags"> Good With Kids</p>
+                    <p class="Tags"> Good withh other dogs</p>
                 </div>
-                <div class="column">
-                    <p> Marco</p>
-                    <img src="starter_files/images/little-dog.jpg" alt="Marco" height="200" width="300">
-                    <p> Adult Male Small Energetic</p>
-                </div>
-                <div class="column">
-                    <p> Shackleton</p>
-                    <img src="starter_files/images/old-shaggy.jpg" alt="Shackleton" height="200" width="300">
-                    <p> Adult Male Medium Easygoing Energetic Good with kids good with other dogs good with cats</p>
-                </div>
-                </div>
-                <div class="column">
-                    <p> Midge</p>
-                    <img src="starter_files/images/shih-tzu.jpg" alt="Midge" height="200" width="300">
-                    <p> Adult Female Small Easygoing good with kids </p>
-                </div>
-                <div class="column">
-                    <p> LadyBird</p>
-                    <img src="starter_files/images/young-bulldog.jpg" alt="LadyBird" height="200" width="300">
-                    <p> Young Female Large Easygoing Energetic Good With Kids Good with other dogs good with cats</p>
-                </div>
-                <div class="column">
-                    <p> Mina </p>
-                    <img src="starter_files/images/young-peppy.jpg" alt="Mina" height="200" width="300">
-                    <p> Puppy Female Medium Energetic Good With Kids Good With other dogs Good with cats</p>
-            <section>
-                <div class="row4">
-                    <img src="starter_files/images/donate.jpg" alt="Donate" height="200" width="300">
-                    <img src="starter_files/images/volunteer.jpg" alt="Volunteer" height="200" width="300">
-                    <img src="starter_files/images/location.png" alt="Location" height="200" width="300">
-                    </div>
+            </div>
 
+        </section>
+        <div class="column2">
+            <p> Tom-Tom </p>
+            <img src="starter_files/images/golden-lab.jpg" alt="Tom-Tom" height="200" width="300">
+            <div class="bluetags">
+                <p class="Tags"> young
+                    <p class="Tags"> Male </p>
+                    <p class="Tags"> Large</p>
+                    <p class="Tags"> Energetic</p>
+                    <p class="Tags"> Good with Kids </p>
+                    <p class="Tags"> good with other dogs </p>
+            </div>
+        </div>
+        <div class="column">
+            <p> Marco</p>
+            <img src="starter_files/images/little-dog.jpg" alt="Marco" height="200" width="300">
+            <div class="bluetags">
+                <p class="Tags"> Adult</p>
+                <p class="Tags"> Male </p>
+                <p class="Tags"> Small </p>
+                <p class="Tags"> Energetic</p>
+            </div>
+        </div>
+        <div class="column">
+            <p> Shackleton</p>
+            <img src="starter_files/images/old-shaggy.jpg" alt="Shackleton" height="200" width="300">
+            <div class="bluetags">
 
-
-
+                <p class="Tags"> Adult</p>
+                <p class="Tags">Male </p>
+                <p class="Tags"> Medium </p>
+                <p class="Tags"> Easygoing</p>
+                <p class="Tags"> Energetic</p>
+                <p class="Tags"> Good with kids </p>
+                <p class="Tags">good with other dogs </p>
+                <p class="Tags"> good with cats</p>
+            </div>
+        </div>
+        <div class="column">
+            <p> Midge</p>
+            <img src="starter_files/images/shih-tzu.jpg" alt="Midge" height="200" width="300">
+            <div class="bluetags">
+                <p class="Tags"> Adult </p>
+                <p class="Tags"> Female</p>
+                <p class="Tags"> Small </p>
+                <p class="Tags"> Easygoing</p>
+                <p class="Tags"> good with kids </p>
+            </div>
+        </div>
+        <div class="column">
+            <p> LadyBird</p>
+            <img src="starter_files/images/young-bulldog.jpg" alt="LadyBird" height="200" width="300">
+            <div class="bluetags">
+                <p class="Tags"> Young
+                    <p class="Tags"> Female</p>
+                    <p class="Tags"> Large </p>
+                    <p class="Tags"> Easygoing</p>
+                    <p class="Tags"> Energetic</p>
+                    <p class="Tags"> Good With Kids </p>
+                    <p class="Tags"> Good with other </p>
+                    <p class="Tags"> dogs good with cats</p>
+            </div>
+        </div>
+        <div class="column">
+            <p> Mina </p>
+            <img src="starter_files/images/young-peppy.jpg" alt="Mina" height="200" width="300">
+            <div class="bluetags">
+                <p class="Tags"> Puppy </p>
+                <p class="Tags"> Female</p>
+                <p class="Tags"> Medium</p>
+                <p class="Tags"> Energetic</p>
+                <p class="Tags"> Good With Kids</p>
+                <p class="Tags"> Good with other dogs </p>
+                <p class="Tags"> Good with cats</p>
+            </div>
+        </body>
+            <section class="overlay">
+                <!-- <footer> -->
+                <!-- <nav> -->
+                <div class="donate">
+                    <p> Donate</p>
+                </div>
+                <div class="volunteer">
+                    <p> volunteer</p>
+                </div>
+                <div class="our_location">
+                    <p> Our Location </p>
+                </div>
+                <!-- </nav> -->
+                <!-- </footer> -->
             </section>
 
+        </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
-
-
-<footer></footer>
 
 </html>
