tried to center footer to be in the center!

--- a/index.html
+++ b/index.html
@@ -160,10 +160,8 @@
                 <p class="Tags"> Good with other dogs </p>
                 <p class="Tags"> Good with cats</p>
             </div>
-        </body>
-            <section class="overlay">
-                <!-- <footer> -->
-                <!-- <nav> -->
+
+            <footer>
                 <div class="donate">
                     <p> Donate</p>
                 </div>
@@ -173,12 +171,9 @@
                 <div class="our_location">
                     <p> Our Location </p>
                 </div>
-                <!-- </nav> -->
-                <!-- </footer> -->
-            </section>
+            </footer>
 
-        </div>
-
+</body>
 
 
 </html>
